# olympus-cli

./: .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml
olympus_cli/: __init__.py  cli.py  formatters.py
olympus_cli/core/: __init__.py  config.py  data_api.py  models.py  olympus.py  polymarket.py
skill/: SKILL.md
skill/evals/: evals.json
