[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-cli"
version = "0.1.0"
description = "CLI tool wrapping the Olympus Trading API and Polymarket Gamma API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Frank Ciafardini", email = "fciaf420@gmail.com"}]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
oly = "olympus_cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["olympus_cli*"]
